nav: fix white overlap

--- a/source/stylesheets/less/_header.less
+++ b/source/stylesheets/less/_header.less
@@ -144,13 +144,6 @@ body.index{
             }
         }
 
-        .nav-white{
-            background-color: rgba(255,255,255, 0.9);
-        }
-
-        .main-links {
-        }
-
         background-color: @white;
 
         .main-links.navbar-nav{
@@ -346,6 +339,15 @@ body.page-sub{
 }
 
 @media (max-width: 768px) {
+
+    body.index {
+        #header {
+
+            .nav-white{
+                background-color: rgba(255,255,255, 0.9);
+            }
+        }
+    }
 
     #header{
 
